Symfony 7.2 minimal skeleton

--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 ###> symfony/framework-bundle ###
+KERNEL_CLASS='SplApp\Kernel'
 APP_ENV=dev
 APP_SECRET=49e4af7269b614c645a9a6a2f479733d
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
 # DEV & PROD
-DATABASE_URL_PRODUCT="mysql://spl-app:password@localhost:3306/spl_product_db?serverVersion=mariadb-10.9.2&charset=utf8mb4"
-DATABASE_URL_EMPLOYEE="mysql://spl-app:password@localhost:3306/spl_employee_db?serverVersion=mariadb-10.9.2&charset=utf8mb4"
-DATABASE_URL_RENTAL="mysql://spl-app:password@localhost:3306/spl_rental_db?serverVersion=mariadb-10.9.2&charset=utf8mb4"
+DATABASE_URL_PRODUCT="mysql://spl-app:password@localhost:3306/spl_app_db?serverVersion=mariadb-10.9.2&charset=utf8mb4"
+DATABASE_URL_EMPLOYEE="mysql://spl-app:password@localhost:3306/spl_app_db?serverVersion=mariadb-10.9.2&charset=utf8mb4"
+DATABASE_URL_RENTAL="mysql://spl-app:password@localhost:3306/spl_app_db?serverVersion=mariadb-10.9.2&charset=utf8mb4"
 # TESTING
 #DATABASE_URL_CUSTOMER_TEST="mysql://root:root@modular-monolith-example-mysql:3306/customer_db_test?serverVersion=8.0&charset=utf8mb4"
 #DATABASE_URL_EMPLOYEE_TEST="mysql://root:root@modular-monolith-example-mysql:3306/employee_db_test?serverVersion=8.0&charset=utf8mb4"
