--- a/composer.json
+++ b/composer.json
@@ -4,26 +4,15 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "php": ">=8.1",
+    "php": ">=8.2",
     "ext-ctype": "*",
     "ext-iconv": "*",
-    "doctrine/doctrine-bundle": "*",
-    "doctrine/doctrine-fixtures-bundle": "*",
-    "doctrine/doctrine-migrations-bundle": "*",
-    "guzzlehttp/guzzle": "^7.5",
-    "sensio/framework-extra-bundle": "^6.2",
-    "symfony/asset": "6.*",
-    "symfony/console": "6.*",
-    "symfony/doctrine-bridge": "*",
-    "symfony/dotenv": "6.*",
-    "symfony/expression-language": "6.*",
-    "symfony/flex": "^1.17|^2",
-    "symfony/framework-bundle": "6.*",
-    "symfony/monolog-bundle": "*",
-    "symfony/runtime": "6.*",
-    "symfony/security-bundle": "",
-    "symfony/uid": "6.*",
-    "symfony/yaml": "6.*"
+    "symfony/console": "^7.2",
+    "symfony/dotenv": "^7.2",
+    "symfony/flex": "^2",
+    "symfony/framework-bundle": "^7.2",
+    "symfony/runtime": "^7.2",
+    "symfony/yaml": "^7.2"
   },
   "config": {
     "allow-plugins": {
@@ -39,15 +28,15 @@
   },
   "autoload": {
     "psr-4": {
-      "Api\\": "Api/",
-      "Employee\\": "Employee/",
-      "Product\\": "Product/",
-      "Rental\\": "Rental/"
+      "SplApp\\": "src/",
+      "SplApp\\Employee\\": "Employee/",
+      "SplApp\\Product\\": "Product/",
+      "SplApp\\Rental\\": "Rental/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "App\\Tests\\": "tests/"
+      "Api\\Tests\\": "tests/"
     }
   },
   "replace": {
@@ -77,12 +66,9 @@
     }
   },
   "require-dev": {
-    "dama/doctrine-test-bundle": "^7.1",
     "friendsofphp/php-cs-fixer": "^3.8",
-    "hautelook/alice-bundle": "^2.11",
     "phpunit/phpunit": "^9.5",
-    "symfony/browser-kit": "5.4.*",
-    "symfony/css-selector": "5.4.*",
+    "symfony/browser-kit": "7.*",
     "symfony/phpunit-bridge": "^6.1"
   }
 }
