--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,15 @@
     "symfony/flex": "^2",
     "symfony/framework-bundle": "^7.2",
     "symfony/runtime": "^7.2",
+    "symfony/uid": "5.4.*",
     "symfony/yaml": "^7.2"
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3.8",
+    "phpunit/phpunit": "^9.5",
+    "symfony/browser-kit": "7.*",
+    "symfony/css-selector": "5.4.*",
+    "symfony/phpunit-bridge": "^6.1"
   },
   "config": {
     "allow-plugins": {
@@ -36,7 +44,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Api\\Tests\\": "tests/"
+      "SplApp\\Tests\\": "tests/"
     }
   },
   "replace": {
@@ -64,11 +72,5 @@
       "allow-contrib": true,
       "require": "5.4.*"
     }
-  },
-  "require-dev": {
-    "friendsofphp/php-cs-fixer": "^3.8",
-    "phpunit/phpunit": "^9.5",
-    "symfony/browser-kit": "7.*",
-    "symfony/phpunit-bridge": "^6.1"
   }
 }
