--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -33,12 +33,12 @@
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
+    <!--
+        <extensions>
+            <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
+        </extensions>
 
-    <extensions>
-        <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
-    </extensions>
-
-    <!-- Run `composer require symfony/panther` before enabling this extension -->
+         Run `composer require symfony/panther` before enabling this extension -->
     <!--
     <extensions>
         <extension class="Symfony\Component\Panther\ServerExtension" />
